<resources>
    <string name="app_name">Minhas Dívidas</string>

    <string name="sem_registro">Não possui dívidas. Cadastre uma nova.</string>

    <string name="nome_label">Nome:</string>
    <string name="valor_label">Valor:</string>

    <string name="cadastrar">Cadastrar</string>
    <string name="atualizar">Atualizar</string>
    <string name="relatorios">Relatórios</string>
    <string name="salvar">Salvar</string>

    <string name="nome_hint">Nome</string>
    <string name="valor_hint">Valor</string>
    <string name="pago_hint">Pago</string>

    <string name="cadastro_erro">Preencha todos os campos!</string>
    <string name="cadastro_dao_erro">Ocorreu um erro ao cadastrar!</string>
    <string name="cadastro_deletar">Item deletado com sucesso!</string>

    <string name="pago">Pago</string>
    <string name="nao_pago">Não pago</string>

    <string name="total_pago">Total pago:</string>
    <string name="total_nao_pago">Total não pago</string>

    <string name="deletar">Deletar</string>
    <string name="categoria_label">Categoria</string>

    <string name="relatorio_pago">Não existem itens pagos</string>
    <string name="relatorio_nao_pago">Não existem itens não pagos</string>

    <string-array name="categoria_array">
        <item>(Selecionar)</item>
        <item>Farmácia</item>
        <item>Alimentação</item>
        <item>Saúde</item>
        <item>Casa</item>
        <item>Outros</item>
    </string-array>

</resources>