<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_nome"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            tools:text="Fulano da Silva" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_valor"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            tools:text="R$ 20,00" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_pago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:padding="8dp"
        android:text="@string/pago"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_nao_pago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/design_default_color_error"
        android:padding="8dp"
        android:text="@string/nao_pago"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>